# amfiteatr_examples

./: Cargo.toml
examples/custom_reward/: main.rs  options.rs  plots.rs
examples/learn_against_policy/: main.rs  options.rs  plots.rs
examples/many_agents/: main.rs  options.rs
examples/one_fixed/: main.rs  options.rs
examples/prisoner2/: main.rs
examples/prisoner_a2c/: main.rs
examples/prisoner_mpsc/: main.rs
examples/prisoner_tcp/: main.rs
examples/replicator_dynamics/: main.rs
old_examples/prisoner2/: main.rs
old_examples/prisoner_a2c/: main.rs
src/: lib.rs  options.rs  plots.rs  series.rs
src/classic/: agent.rs  common.rs  domain.rs  env.rs  mod.rs  policy.rs
src/classic/agent/: historyless.rs  mod.rs  own_history.rs  prisoner.rs
src/pairing/: mod.rs
src/prisoner/: agent.rs  common.rs  domain.rs  env.rs  mod.rs
