[package]
name = "sztorm_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "prisoner2"

[[example]]
name = "prisoner_a2c"

[dependencies]

sztorm = {path = "../sztorm"}
sztorm_rl = {path = "../sztorm_rl"}
rand = "0.8.5"
log = "0.4.19"
thiserror = "1.0.40"
fern = "0.6.2"
chrono = "0.4.26"
tch = "0.13.0"
clap = "4.3.10"
