[package]
name = "amfi_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "prisoner2"

[[example]]
name = "prisoner_a2c"

[[example]]
name = "many_agents"

[[example]]
name = "custom_reward"

#[[example]]
#name = "learn_against_policy"

[dependencies]

amfi = {path = "../amfi", features = ["serde"] }
amfi_rl = {path = "../amfi_rl" }
rand = "0.8.5"
log = "0.4.19"
thiserror = "1.0.40"
fern = "0.6.2"
chrono = "0.4.26"
tch = "0.14.0"
clap = {version = "4.3.10", features = ["derive"]}
anyhow = "1.0.71"
serde = {version = "1.0.164", features = ["derive", "rc"]}
enum-map = {version = "2.7.1", features = ["serde"]}
plotters = "0.3.5"
plotlib = "0.5.1"
amfi_classic = {path = "../amfi_classic"}
serde_json = "1.0.108"
