[package]
name = "amfi_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "prisoner2"

[[example]]
name = "prisoner_a2c"

[[example]]
name = "replicator_dynamics"

[[example]]
name = "custom_reward"

[[example]]
name = "one_fixed"

[dependencies]

amfi_core = {path = "../amfi_core", features = ["serde"] }
amfi_rl = {path = "../amfi_rl" }
rand = "0.8.5"
log = "0.4.20"
thiserror = "1.0.56"
fern = "0.6.2"
chrono = "0.4.31"
tch = "0.14.0"
clap = {version = "4.4.14", features = ["derive"]}
anyhow = "1.0.79"
serde = {version = "1.0.195", features = ["derive", "rc"]}
enum-map = {version = "2.7.3", features = ["serde"]}
plotters = "0.3.5"
plotlib = "0.5.1"
amfi_classic = {path = "../amfi_classic"}
serde_json = "1.0.111"
